objects/geopointe__Temp__c.object
<CustomObject>
    <description>Used by Geopointe as &quot;temp space&quot; for the application.  Geopointe will periodically kick off a background process to clear data from this object.</description>
    <fields>
        <fullName>geopointe__Boolean_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boolean 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Boolean_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boolean 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Boolean_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boolean 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Currency_1__c</fullName>
        <label>Currency 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>geopointe__Currency_2__c</fullName>
        <label>Currency 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>geopointe__Currency_3__c</fullName>
        <label>Currency 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>geopointe__DateTime_1__c</fullName>
        <label>DateTime 1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>geopointe__DateTime_2__c</fullName>
        <label>DateTime 2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>geopointe__DateTime_3__c</fullName>
        <label>DateTime 3</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>geopointe__Date_1__c</fullName>
        <label>Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>geopointe__Date_2__c</fullName>
        <label>Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>geopointe__Date_3__c</fullName>
        <label>Date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>geopointe__Integer_1__c</fullName>
        <label>Integer 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Integer_2__c</fullName>
        <label>Integer 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Integer_3__c</fullName>
        <label>Integer 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Long_Text_1__c</fullName>
        <label>Long Text 1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Long_Text_2__c</fullName>
        <label>Long Text 2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Long_Text_3__c</fullName>
        <label>Long Text 3</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Multi_Picklist_1__c</fullName>
        <label>Multi Picklist 1</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>geopointe__Number_12_6_1__c</fullName>
        <label>Number (12,6) 1</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Number_12_6_2__c</fullName>
        <label>Number (12,6) 2</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Number_12_6_3__c</fullName>
        <label>Number (12,6) 3</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Picklist_1__c</fullName>
        <label>Picklist 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>geopointe__Text_1__c</fullName>
        <label>Text 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Text_2__c</fullName>
        <label>Text 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Text_3__c</fullName>
        <label>Text 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>API Assign Records</fullName>
                </value>
                <value>
                    <fullName>Add To Campaign</fullName>
                </value>
                <value>
                    <fullName>Batch Job</fullName>
                </value>
                <value>
                    <fullName>Dataset Extension</fullName>
                </value>
                <value>
                    <fullName>Geocode Cleanup</fullName>
                </value>
                <value>
                    <fullName>Print Route</fullName>
                </value>
                <value>
                    <fullName>SK Data Set Push</fullName>
                </value>
                <value>
                    <fullName>SK Session Id</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Geopointe Temp</label>
    <listViews>
        <fullName>geopointe__All</fullName>
        <columns>NAME</columns>
        <columns>geopointe__Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Temp Records</label>
    </listViews>
    <nameField>
        <displayFormat>TMP-{00000}</displayFormat>
        <label>Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Geopointe Temp</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>